LC-3596 - Unit test added